# omniSystem

./: CMakeLists.txt  README.md  package.xml
config/: tag.yaml
launch/: aruco_ros.launch  camera.launch  camera_tracking.launch  hardware.launch  omniMachine.env  open_loop_system.launch  system.launch  system_control.launch  video.launch
msg/: OmniRotationCommand.msg
rviz/: config_file.rviz  video.rviz
src/: camera_calibration.xml  camera_node.cpp  dashed_center_line.cpp  main.cpp  omni_node.cpp  rvizStuff.cpp  simple_aruco_detector_node.cpp
src/OmniMagnetProjectCameraTracking/: CMakeLists.txt  cameratrack.cpp  cameratrack.hpp  main.cpp  omnimagnet.cpp  omnimagnet.hpp  rect.cpp  rect.hpp  type.cpp  type.hpp
